<?xml version="1.0"?>
<package>
  <name>interactive_marker_tf</name>
  <version>0.0.0</version>
  <description>The interactive_marker_tf package</description>

  <maintainer email="k104009y@mail.kyutech.jp">Arita Yuta</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
